--- a/configuration/routes/routes.yml
+++ b/configuration/routes/routes.yml
@@ -133,8 +133,15 @@ parameters:
         # PUSH ROUTES
         ################################################################################################################
 
-        push: {route: '/derp9', stack: []}
-        push.start: {route: '/derp10', stack: []}
+        push:
+            method: 'GET'
+            route: '/pushes/{push:%r.release%}'
+            stack: ['middleware.signed_in', 'middleware.require_entity', 'push.page']
+
+        push.start:
+            method: ['GET', 'POST']
+            route: '/builds/{build:%r.build%}/push'
+            stack: ['middleware.signed_in', 'middleware.require_entity', 'push.start.handler', 'push.start.page']
 
         ################################################################################################################
 
