--- a/configuration/ui/controllers.yml
+++ b/configuration/ui/controllers.yml
@@ -198,7 +198,6 @@ services:
             - '@push.start.validator'
             - '@sticky.environment'
             - '@uri'
-            - '@twig.context'
     build.start.validator:
         class: 'Hal\UI\Validator\BuildValidator'
         arguments:
@@ -211,15 +210,31 @@ services:
     # PUSH CONTROLLERS
     ####################################################################################################################
 
+    push.page:
+        class: 'Hal\UI\Controllers\Push\PushController'
+        arguments: ['@push.twig', '@service.event_logs']
+    push.twig:
+        parent: 'twig.template'
+        calls: [['setTemplate', ['push/push.twig']]]
+
+    push.start.page:
+        class: 'Hal\UI\Controllers\Push\StartPushController'
+        arguments:
+            - '@push.start.twig'
+            - '@doctrine.em'
+            - '@pools'
+            - '@uri'
+    push.start.twig:
+        parent: 'twig.template'
+        calls: [['setTemplate', ['push/start.twig']]]
+
     push.start.handler:
         class: 'Hal\UI\Controllers\Push\StartPushHandler'
         arguments:
             - '@doctrine.em'
             - '@push.start.validator'
-            - '@uri'
-            - '@utility.id.generator'
-            - '@twig.context'
             - '@sticky.environment'
+            - '@uri'
     push.start.validator:
         class: 'Hal\UI\Validator\PushValidator'
         arguments:
