--- a/configuration/api/services.yml
+++ b/configuration/api/services.yml
@@ -20,7 +20,7 @@ services:
             - ['addNormalizer', ['QL\Hal\Core\Entity\Build', '@api_normalizer.build']]
             - ['addNormalizer', ['QL\Hal\Core\Entity\Deployment', '@api_normalizer.deployment']]
             - ['addNormalizer', ['QL\Hal\Core\Entity\Environment', '@api_normalizer.environment']]
-            - ['addNormalizer', ['QL\Hal\Core\Entity\EventLog', '@api_normalizer.events']]
+            - ['addNormalizer', ['QL\Hal\Core\Entity\EventLog', '@api_normalizer.event']]
             - ['addNormalizer', ['QL\Hal\Core\Entity\Group', '@api_normalizer.group']]
             - ['addNormalizer', ['QL\Hal\Core\Entity\Push', '@api_normalizer.push']]
             - ['addNormalizer', ['QL\Hal\Core\Entity\Server', '@api_normalizer.server']]
@@ -47,7 +47,7 @@ services:
     api_normalizer.environment:
         class: 'Hal\UI\API\Normalizer\EnvironmentNormalizer'
 
-    api_normalizer.events:
+    api_normalizer.event:
         class: 'Hal\UI\API\Normalizer\EventNormalizer'
         arguments: ['@api_normalizer.build', '@api_normalizer.push']
 
